5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_1802.log
== TEST (2019-03-26 11:31:03) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math
dano = (5 * D1)**0.5
dano2 = pi**D2/3
DT = int(dano + dano2)
print(DT)

-- ERROR:
File "XXXX", line 4
    from math
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:17) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from mathi import pi
dano = (5 * D1)**0.5
dano2 = pi**D2/3
DT = int(dano + dano2)
print(DT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from mathi import pi
ModuleNotFoundError: No module named 'mathi'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:31) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = (5 * D1)**0.5
dano2 = pi**D2/3
DT = int(dano + dano2)
print(DT)

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:13) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = (5 * D1)**0.5
dano2 = pi**D2/3
DT = int(dano + dano2)
print(DT)

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:57) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = (5 * D1)**0.5
dano2 = pi**(D2/3)
DT = int(dano + dano2)
print(DT)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:36:01) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = float((5 * D1)**0.5)
dano2 = Float(pi**(D2/3))
DT = int(dano + dano2)
print(DT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano2 = Float(pi**(D2/3))
NameError: name 'Float' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:36:11) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = float((5 * D1)**0.5)
dano2 = float(pi**(D2/3))
DT = int(dano + dano2)
print(DT)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:37:31) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = float((5 * D1)**0.5)
dano2 = float(pi**(D2/3))
DT = (dano + dano2)
DT1 = int(DT)
print(DT1)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:38:28) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = ((5 * D1)**0.5)
print(dano)

-- OUTPUT:
2.23606797749979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:39:41) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = ((5 * D1)**0.5)
dano1 = (pi**d2/3)
print(dano)
print(dano1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano1 = (pi**d2/3)
NameError: name 'd2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:39:56) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = ((5 * D1)**0.5)
dano1 = (pi**D2/3)
print(dano)
print(dano1)

-- OUTPUT:
2.23606797749979
320.4630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:40:48) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = float((5 * D1)**0.5)
dano2 = float(pi**(D2/3))
DT = (dano + dano2)
DT1 = int(DT)
print(DT1)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:41:33) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = float((5 * D1)**0.5)
dano2 = float(pi**(D2/3))
DT = (dano + dano2)
DT1 = int(DT)
total = PV - DT1
print(total)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:41:41) 
-- CODE:
PV = int(input("pontos de vida iniciais? "))
D1 = int(input("valor no dado 1? "))
D2 = int(input("valor no dado 2? "))
from math import pi
dano = float((5 * D1)**0.5)
dano2 = float(pi**(D2/3))
DT = (dano + dano2)
DT1 = int(DT)
total = PV - DT1
print(total)

-- EXECUTION TIME:
0.111622
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:42:33) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = (5 * D1)**0.5
d2 = (pi)**D2/3

dano = d1 + d2

PR = PV - dano
print(PR)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:43:21) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import pi

d1 = (5 * D1)**0.5
d2 = (pi)**D2/3

dano = d1 + d2

PR = PV - dano
print(PR)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:44:48) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = (5 * D1)**0.5
d2 = (pi)**D2/3

dano = d1 + d2

PR = PV - dano
print(dano)
print(PR)
-- OUTPUT:
322.6991325026012
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:45:30) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = int((5 * D1)**0.5)
d2 = int((pi)**D2/3)

dano = d1 + d2

PR = PV - dano
print(dano)
print(PR)
-- OUTPUT:
322
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:46:24) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = int((5 * D1)**0.5)
d2 = int((pi)**D2/3)

dano = d1 + d2

PR = PV - dano
print(D1)
print(PR)
-- OUTPUT:
1
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:47:01) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = int((5 * D1)**0.5)
d2 = int((pi)**D2/3)

dano = d1 + d2

PR = PV - dano
print(D2)
print(PR)
-- OUTPUT:
6
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:47:36) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = int((5 * D1)**0.5)
d2 = int(pi**D2/3)

dano = d1 + d2

PR = PV - dano
print(D2)
print(PR)
-- OUTPUT:
6
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:48:11) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = int(5 * D1**0.5)
d2 = int(pi**D2/3)

dano = d1 + d2

PR = PV - dano
print(D2)
print(PR)
-- OUTPUT:
6
-125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:50:43) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

d1 = (5*D1)**0.5
d2 = pi**D2/3

dano = int(d1 + d2)

PR = PV - dano
print(D2)
print(PR)
-- OUTPUT:
6
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:53:33) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano = ((5 + D1)**0.5 + (pi**D2/3))
print(dano)
-- OUTPUT:
322.91255426788456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:53:39) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano = ((5 + D1)**0.5 + (pi**D2/3))
print(dano)
-- OUTPUT:
322.91255426788456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:54:56) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano = ((5 * D1)**0.5 + (pi**D2/3))
print(dano)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:56:14) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 = (5 * D1)**0.5
print(dano1)
-- OUTPUT:
2.23606797749979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:56:59) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 = int((5 * D1)**0.5)
dano2 = int(pi**D2/3)
print(dano2)
-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:59:22) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import pi

dano1 = int((5 * D1)**0.5)
dano2 = int(pi**D2/3)
print(dano2)
-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:00:12) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 = int((5 * D1)**0.5)
dano2 = int((pi)**D2/3)
print(dano2)
-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:02:53) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 =(5 * D1)**0.5
dano2 = pi**D2/3
print(dano2)
-- OUTPUT:
320.4630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:04:35) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 =(5 * D1)**0.5
dano2 = pi** D2/3
print(dano2)
-- OUTPUT:
320.4630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:06:25) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 =(5 * D1)**0.5
dano2 = pi**D2/3
print(dano2)
-- OUTPUT:
320.4630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:07:22) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 =(5 * D1)**0.5
dano2 = pi**D2/3
dt = int(dano1 +dano2)
pr = PV - dt
print(pr)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:08:03) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano1 =(5 * D1)**0.5
dano2 = pi**D2/3
dt = int(dano1 +dano2)
pr = PV - dt
print(dano1)
print(pr)
-- OUTPUT:
2.23606797749979
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:13:15) 
-- CODE:
PV = int(input("insira os pontos de vida:"))
D1 = int(input("insira o valor do dado1:"))
D2 = int(input("insira o valor do dado2:"))

from math import *

dano =(5 * D1)**0.5 + pi**D2/3

dt = int(dano)
pr = PV - dt
print(dano)
print(pr)
-- OUTPUT:
322.6991325026012
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:20:53) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi**d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:21:48) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:22:08) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:22:14) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.176184
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:22:19) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.170489
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:22:20) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:23:00) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.212801
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:23:03) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.151636
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:23:06) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.256348
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:23:20) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.175271
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
insira a vida:insira o valor1:insira o valor2:192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
insira a vida:insira o valor1:insira o valor2:289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
insira a vida:insira o valor1:insira o valor2:497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:23:22) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:23:38) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:24:49) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = ((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.285463
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191.48074671532063
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288.23958911776873
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:25:23) 
-- CODE:
pv = float(input("insira a vida:"))
d1 = float(input("insira o valor1:"))
d2 = float(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:25:28) 
-- CODE:
pv = float(input("insira a vida:"))
d1 = float(input("insira o valor1:"))
d2 = float(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.18072
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:25:32) 
-- CODE:
pv = float(input("insira a vida:"))
d1 = float(input("insira o valor1:"))
d2 = float(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.130984
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:25:33) 
-- CODE:
pv = float(input("insira a vida:"))
d1 = float(input("insira o valor1:"))
d2 = float(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:25:54) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:26:09) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:26:22) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.220059
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:26:33) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.202922
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:28:10) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano
print(dano)
print(pr)
-- OUTPUT:
8
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:28:23) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano
print(dano)
print(pr)
-- EXECUTION TIME:
0.152318
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
8
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
11
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:29:05) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = ((5*d1)**0.5 + pi*d2/3)

pr = pv - dano
print(dano)
print(pr)
-- EXECUTION TIME:
0.177887
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
8.519253284679376
191.48074671532063
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
11.760410882231248
288.23958911776873
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3.283265528696387
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:29:16) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + pi*d2/3)

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.13941
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:29:48) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.185539
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:29:52) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.120515
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:30:45) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi * d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:30:56) 
-- CODE:
pv = int(input("insira a vida:"))
d1 = int(input("insira o valor1:"))
d2 = int(input("insira o valor2:"))

from math import *

dano = int((5*d1)**0.5 + (pi * d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.152918
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:32:56) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi * d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:32:59) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi * d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.157965
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:38:47) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi * d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.186032
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:39:29) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi ** d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:40:11) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:40:21) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:40:27) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.206842
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:42:36) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = ((5*d1)**0.5 + (pi*d2/3))

pr = pv - int(dano)

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:42:41) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = ((5*d1)**0.5 + (pi*d2/3))

pr = pv - int(dano)

print(pr)
-- EXECUTION TIME:
0.148043
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:49:12) 
-- CODE:
pv = float(input("insira a vida: "))
d1 = float(input("insira o valor1: "))
d2 = float(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:49:25) 
-- CODE:
pv = float(input("insira a vida: "))
d1 = float(input("insira o valor1: "))
d2 = float(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.144323
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:49:36) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.165233
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:49:39) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano = int((5*d1)**0.5 + (pi*d2/3))

pr = pv - dano

print(pr)
-- EXECUTION TIME:
0.147666
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:52:09) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano1 = int((5*d1)**0.5 
dano2 = int(pi * D2/3)				
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.166496
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 8
    dano2 = int(pi * D2/3)				
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:52:11) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano1 = int((5*d1)**0.5 
dano2 = int(pi * D2/3)				
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- ERROR:
File "XXXX", line 8
    dano2 = int(pi * D2/3)				
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:53:03) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5*d1)**0.5 
dano2 = int(pi * D2/3)				
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- ERROR:
File "XXXX", line 8
    dano2 = int(pi * D2/3)				
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:53:34) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5*d1)**0.5 
dano2 = int(pi * (D2/3))			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- ERROR:
File "XXXX", line 8
    dano2 = int(pi * (D2/3))			
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:54:32) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5*d1)**0.5 
dano2 = int(pi * D2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- ERROR:
File "XXXX", line 8
    dano2 = int(pi * D2/3)			
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:55:08) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = (5*d1)**0.5 
dano2 = (pi * D2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dano2 = (pi * D2/3)			
NameError: name 'D2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:55:23) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = (5*d1)**0.5 
dano2 = (pi * D2/3)			
dt = int(dano1 + dano2)
pr = pv - dt

print(pr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dano2 = (pi * D2/3)			
NameError: name 'D2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:55:57) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = (5*d1)**0.5 
dano2 = (pi * d2/3)			
dt = int(dano1 + dano2)
pr = pv - dt

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:56:08) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = (5*d1)**0.5 
dano2 = (pi * d2/3)			
dt = int(dano1 + dano2)
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.147747
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:56:11) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = (5*d1)**0.5 
dano2 = (pi * d2/3)			
dt = int(dano1 + dano2)
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.158626
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:56:32) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int(5*d1)**0.5 
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- OUTPUT:
191.7639320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:56:46) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int(5*d1)**0.5 
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- OUTPUT:
191.7639320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:57:26) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5*d1)**0.5)
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:57:38) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5*d1)**0.5)
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.168637
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:57:43) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5*d1)**0.5)
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.153683
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:59:45) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5*d1)**0.5)
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.224146
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:00:31) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5 * d1)**0.5)
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:00:44) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5 * d1)**0.5)
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.182461
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:01:31) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((5 * d1)**0.5)
dano2 = int(pi * d2/3)			
dt = dano1 + dano2
pr = pv - dt

print(pr)
-- EXECUTION TIME:
0.209659
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:03:39) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 +dano2
pr = pv -dt
print(pr)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:03:49) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 +dano2
pr = pv -dt
print(pr)
-- EXECUTION TIME:
0.174406
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:03:52) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 +dano2
pr = pv -dt
print(pr)
-- EXECUTION TIME:
0.135395
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:05:39) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 +dano2
r = pv -dt
print(r)
-- EXECUTION TIME:
0.182789
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:06:12) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv -dt
print(r)
-- EXECUTION TIME:
0.198434
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:06:18) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- EXECUTION TIME:
0.277971
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:06:30) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:06:42) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int((d1 * 5)**0.5)
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- EXECUTION TIME:
0.155005
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:07:34) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int(sqrt(5 * d1))
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano1 = int(sqrt(5 * d1))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:09:05) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int(sqrt(5 * d1))
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano1 = int(sqrt(5 * d1))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:09:39) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import pi

dano1 = int(sqrt(5 * d1))
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano1 = int(sqrt(5 * d1))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:09:58) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano1 = int(sqrt(5 * d1))
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:10:09) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano1 = int(sqrt(5 * d1))
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- EXECUTION TIME:
0.136588
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:11:58) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano1 = int(sqrt(5 * d1))
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- EXECUTION TIME:
0.186956
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:12:04) 
-- CODE:
pv = int(input("insira a vida: "))
d1 = int(input("insira o valor1: "))
d2 = int(input("insira o valor2: "))

from math import *

dano1 = int(sqrt(5 * d1))
dano2 = int(pi * d2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:12:49) 
-- CODE:
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))

from math import *

dano1 = int(sqrt(5 * D1))
dano2 = int(pi * D2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- EXECUTION TIME:
0.163582
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:12:51) 
-- CODE:
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))

from math import *

dano1 = int(sqrt(5 * D1))
dano2 = int(pi * D2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:13:38) 
-- CODE:
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))

from math import *

dano1 = int(sqrt(5 * D1))
dano2 = int(pi * D2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:26:04) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))



dano1 = int(sqrt(5 * D1))
dano2 = int(pi * D2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:26:08) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))



dano1 = int(sqrt(5 * D1))
dano2 = int(pi * D2/3)
dt = dano1 + dano2
r = pv - dt
print(r)
-- EXECUTION TIME:
0.158348
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:58:45) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))


dano1 = int(sqrt(5 * D1))
dano2 = int(pi * D2/3)
dt = abs(dano1 + dano2)
r = pv - dt
print(r)
-- EXECUTION TIME:
0.160438
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:59:13) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))


dano1 = (sqrt(5 * D1))
dano2 = (pi * D2/3)
dt = abs(int(dano1 + dano2))
r = pv - dt
print(r)
-- EXECUTION TIME:
0.159529
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:59:15) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))


dano1 = (sqrt(5 * D1))
dano2 = (pi * D2/3)
dt = abs(int(dano1 + dano2))
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:59:28) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))


dano1 = (sqrt(5 * D1))
dano2 = (pi * D2/3)
dt = abs(int(dano1 + dano2))
r = pv - dt
print(r)
-- EXECUTION TIME:
0.206299
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:10:41) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))


dano1 = (sqrt(5 * D1))
dano2 = (pi * D2/3)
dt = abs(int(dano1 + dano2))
r = pv - dt
print(r)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:12:46) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))


dano1 = (sqrt(5 * D1))
dano2 = (pi ** (D2/3))
dt = abs(int(dano1 + dano2))
r = pv - dt
print(r)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:12:56) 
-- CODE:
from math import *
pv = int(input("insira a vida: "))
D1 = int(input("insira o valor1: "))
D2 = int(input("insira o valor2: "))


dano1 = (sqrt(5 * D1))
dano2 = (pi ** (D2/3))
dt = abs(int(dano1 + dano2))
r = pv - dt
print(r)
-- EXECUTION TIME:
0.153645
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
